--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-graphene>=1.0
+graphql-core==1.1
+graphene==1.4
 flask-graphql>=1.2.0
-pyquery>=1.2.11
-requests>=2.9.1
-SQLAlchemy>=1.1.15
+pyquery==1.2.11
+requests==2.9.1
+SQLAlchemy==1.1.15
 six
 singledispatch
