--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 graphql-core==1.1
-graphene==1.4
+graphene~=1.4.2
 flask-graphql>=1.2.0
-pyquery==1.2.11
+pyquery~=1.2.17
 requests==2.9.1
-SQLAlchemy==1.1.15
-six
-singledispatch
+SQLAlchemy~=1.1.1
+six~=1.11.0
+singledispatch~=3.4.0.3
+
+argparse~=1.4.0
+Flask~=0.10.1
+pykl~=0.1.4
+schema~=0.6.7
+redis~=2.10.6
+Jinja2~=2.9.6
+gevent~=1.4.0
+setuptools~=41.2.0
